--- a/src/webapp/WEB-INF/pages/index.html
+++ b/src/webapp/WEB-INF/pages/index.html
@@ -11,7 +11,7 @@
   <div>
     <h1>H1 page header</h1>
     <p>I will display &#1025;</p>
-    <p>I will display &#x0410;&#x0415;&#x0416;</p>
+    <p>I will display &#x0410;&#x0415;&#x0416;&#x0417;</p>
     <th:block th:each="msg : ${messages}">
       <h1 th:text="${msg}"></h1>
     </th:block>
