--- a/src/webapp/WEB-INF/pages/index.html
+++ b/src/webapp/WEB-INF/pages/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv='Content-Type' content='text/html; charset=UTF-8'>
-  <title></title>
+  <title>Home page</title>
+  <link rel="shortcut icon" type="image/x-icon" href="@{/favicon.ico}">
+  <link th:href="@{/styles/cssandjs/main.css}" rel="stylesheet" />
 </head>
 
 <body>
@@ -15,8 +16,12 @@
     <th:block th:each="msg : ${messages}">
       <h1 th:text="${msg}"></h1>
     </th:block>
+
+    <h2>Carefully Styled Heading</h2>
+    <p>
+      This is text on which we want to apply <strong>very special</strong> styling.
+    </p>
   </div>
 </body>
-<!-- <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"> -->
 
 </html>
