car controller add

--- a/src/webapp/WEB-INF/pages/start.html
+++ b/src/webapp/WEB-INF/pages/start.html
@@ -23,6 +23,9 @@
     <li>
       <a href="hello">Запуск начального HelloController</a>
     </li>
+    <li>
+      <a th:href="@{/car}">Запуск CarController</a>
+    </li>
   </ul>
   <ul>
     <li>
