--- a/src/webapp/WEB-INF/pages/car.html
+++ b/src/webapp/WEB-INF/pages/car.html
@@ -3,24 +3,20 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Home page</title>
+  <title>Car page</title>
   <link rel="shortcut icon" type="image/x-icon" href="@{/favicon.ico}">
   <link th:href="@{/styles/cssandjs/main.css}" rel="stylesheet" />
 </head>
 
 <body>
   <div>
-    <h1>Home page (страница проекта)</h1>
+    <h1>Car page (автомобили)</h1>
     <th:block th:each="msg : ${messages}">
       <h3 th:text="${msg}"></h3>
     </th:block>
-
-    <h2>Carefully Styled Heading</h2>
-    <p>
-      This is text on which we want to apply <strong>very special</strong> styling.
-    </p>
   </div>
-  <a th:href="@{/}">На главную</a>
+  <div>
+    <a th:href="@{/}">На главную</a>
 </body>
 
 </html>
