add some log info

--- a/src/webapp/WEB-INF/pages/start.html
+++ b/src/webapp/WEB-INF/pages/start.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>Home page</title>
   <link rel="shortcut icon" type="image/x-icon" th:href="@{/favicon.ico}">
-  <link th:href="@{/static/styles/cssandjs/main.css}" rel="stylesheet" />
+  <!-- <link href="@{/styles/cssandjs/main.css}" rel="stylesheet" /> -->
 </head>
 
 <body>
