count in request and cars.html

--- a/src/webapp/WEB-INF/pages/start.html
+++ b/src/webapp/WEB-INF/pages/start.html
@@ -24,7 +24,7 @@
       <a href="hello">Запуск начального HelloController</a>
     </li>
     <li>
-      <a th:href="@{/car}">Запуск CarController</a>
+      <a th:href="@{/cars}">Запуск CarController</a>
     </li>
   </ul>
   <ul>
